fix: return to normal

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ body{font-family:'Inter',sans-serif}@layer properties;@layer theme,base,componen
                 <ul class="space-y-2 text-sm">
                     <li><a href="tel:+33661206103" class="hover:text-sky-400">06 61 20 61 03</a></li>
                     <li><a href="mailto:alpesalarme@gmail.com" class="hover:text-sky-400">alpesalarme@gmail.com</a></li>
-                    <li>Sisteron, 04200, Test</li>
+                    <li>Sisteron, 04200</li>
                 </ul>
             </div>
         </div>
