feat: meta title and og:site_name

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Alpes Alarme Sisteron">
     
     <!-- SEO - Titre et Description -->
     <title>AlpesAlarme - Installation Alarmes & Sécurité - Sisteron & 04</title>
@@ -17,10 +18,11 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.alpesalarme.fr"> <!-- Mettez l'URL réelle ici -->
     <meta property="og:image" content="https://alpesalarme.fr/images/papa.avif"> <!-- Image pour le partage -->
+    <meta popover="og:site_name" content="Alpes Alarme Sisteron">
 
     <!-- SEO - Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="AlpesAlarme - Installation Alarmes & Sécurité">
+    <meta name="twitter:title" content="AlpesAlarme - Installation Alarmes & Sécurité à Sisteron">
     <meta name="twitter:description" content="Protégez votre domicile ou entreprise avec AlpesAlarme, votre expert local.">
     <meta name="twitter:image" content="https://alpesalarme.fr/images/papa.avif">
 
