--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta property="og:url" content="https://www.alpesalarme.fr"> <!-- Mettez l'URL réelle ici -->
     <meta property="og:image" content="https://alpesalarme.fr/images/papa.avif"> <!-- Image pour le partage -->
     <meta popover="og:site_name" content="Alpes Alarme Sisteron">
+    <meta popover="og:title" content="Alpes Alarme Sisteron">
 
     <!-- SEO - Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
