feat: change title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="title" content="Alpes Alarme Sisteron">
     
     <!-- SEO - Titre et Description -->
-    <title>AlpesAlarme - Installation Alarmes & Sécurité - Sisteron & 04</title>
+    <title>Alpes Alarme Sisteron</title>
     <meta name="description" content="AlpesAlarme, votre artisan expert pour l'installation de systèmes d'alarme, vidéosurveillance et sécurité pour particuliers et professionnels à Sisteron et dans les Alpes-de-Haute-Provence (04).">
     
     <!-- SEO - Mots-clés -->
