feat: Google Search

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     
     <!-- SEO - Titre et Description -->
     <title>Alpes Alarme Sisteron</title>
+    <script type="application/ld+json">
+        {
+        "@context" : "https://schema.org",
+        "@type" : "WebSite",
+        "name" : "Alpes Alarme Sisteron",
+        "url" : "https://alpesalarme.fr"
+        }
+    </script>
     <meta name="description" content="AlpesAlarme, votre artisan expert pour l'installation de systèmes d'alarme, vidéosurveillance et sécurité pour particuliers et professionnels à Sisteron et dans les Alpes-de-Haute-Provence (04).">
     
     <!-- SEO - Mots-clés -->
