--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ body{font-family:'Inter',sans-serif}@layer properties;@layer theme,base,componen
                     <span class="text-xl font-extrabold text-white">Alpes<span class="text-sky-500">Alarme</span></span>
                 </a>
                 <p class="text-sm text-slate-400">
-                    &copy; 2024 AlpesAlarme. <br> Tous droits réservés.
+                    &copy; 2024 AlpesAlarme. <br> Tous droits réservés. Test
                 </p>
             </div>
             
