feat: size change

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body{font-family:'Inter',sans-serif}@layer properties;@layer theme,base,componen
             
             <!-- Logo SVG "AlpesAlarme" -->
             <a href="#" class="flex items-center" aria-label="AlpesAlarme - Page d'accueil">
-                <span class="text-2xl font-extrabold text-slate-900">Alpes<span class="text-sky-600">Alarme</span></span>
+                <span class="text-3xl font-extrabold text-slate-900">Alpes<span class="text-sky-600">Alarme</span></span>
             </a>
             
             <!-- Navigation Desktop -->
@@ -114,7 +114,7 @@ body{font-family:'Inter',sans-serif}@layer properties;@layer theme,base,componen
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <!-- Texte du Héros -->
                 <div class="text-center md:text-left">
-                    <span class="text-sky-600 font-semibold uppercase tracking-wider">Votre expert sécurité local (04 & 05)</span>
+                    <span class="text-xl text-sky-600 font-semibold uppercase tracking-wider">Votre expert sécurité local (04 & 05)</span>
                     <h1 class="text-4xl md:text-6xl font-extrabold text-slate-900 mt-3 mb-6 leading-tight">
                         Votre sécurité, notre priorité dans les Alpes
                     </h1>
