feat: add cities

--- a/index.html
+++ b/index.html
@@ -8,17 +8,28 @@
     <!-- SEO - Titre et Description -->
     <title>Alpes Alarme Sisteron</title>
     <script type="application/ld+json">
-        {
-        "@context" : "https://schema.org",
-        "@type" : "WebSite",
-        "name" : "Alpes Alarme Sisteron",
-        "url" : "https://alpesalarme.fr"
-        }
+    {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Alpes Alarme Sisteron",
+    "url": "https://alpesalarme.fr"
+    }
     </script>
+
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Alpes Alarme",
+    "url": "https://alpesalarme.fr",
+    "areaServed": ["Sisteron", "Laragne-Montéglin", "Ribiers", "Mison", "05", "04"]
+    }
+    </script>
+
     <meta name="description" content="AlpesAlarme, votre artisan expert pour l'installation de systèmes d'alarme, vidéosurveillance et sécurité pour particuliers et professionnels à Sisteron et dans les Alpes-de-Haute-Provence (04).">
     
     <!-- SEO - Mots-clés -->
-    <meta name="keywords" content="alarme, sécurité, installation, artisan, Sisteron, 04, Alpes-de-Haute-Provence, vidéosurveillance, télésurveillance, dépannage, AlpesAlarme">
+    <meta name="keywords" content="alarme, sécurité, installation, artisan, Sisteron, 04, Alpes-de-Haute-Provence, vidéosurveillance, télésurveillance, dépannage, AlpesAlarme, 05, Ribiers, Laragne">
     
     <!-- SEO - Open Graph (pour le partage sur les réseaux sociaux) -->
     <meta property="og:title" content="AlpesAlarme - Installation Alarmes & Sécurité">
@@ -358,6 +369,15 @@ body{font-family:'Inter',sans-serif}@layer properties;@layer theme,base,componen
                             <div class="w-full h-64 bg-slate-200 rounded-lg flex items-center justify-center">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2861.019936057234!2d5.946649076656935!3d44.18605601780414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12cba68d11fb8331%3A0x7ebcd7eafb6fcfa6!2sAlpes%20Alarme!5e0!3m2!1sfr!2sfr!4v1761921308980!5m2!1sfr!2sfr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                
                             </div>
+                        </div>
+                        <div>
+                            <p class="text-slate-600 mb-8">
+                                Zone d'intervention: Sisteron, Peipin, Digne-Les-Bains, 
+                                Mison, Volonne, Malijai, Les Mées, Le Poët, 
+                                Laragne-Montéglin, La Motte-Du-Caire, Val Buëch-Méouge,
+                                Salignac, Banon, Aiglun, Mallemoisson, Cruis, Saint-Étienne-Les-Orgues,
+                                Forcalquier, La Brillanne Oraison, Valernes, Vaumeilh, Thèze, 04, 05.
+                            </p>
                         </div>
             </div>
         </section>
