feat: add Ribiers

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ body{font-family:'Inter',sans-serif}@layer properties;@layer theme,base,componen
                         </div>
                         <div>
                             <p class="text-slate-600 mb-8">
-                                Zone d'intervention: Sisteron, Peipin, Digne-Les-Bains, 
+                                Zones d'interventions: Sisteron, Peipin, Digne-Les-Bains, Ribiers,
                                 Mison, Volonne, Malijai, Les Mées, Le Poët, 
                                 Laragne-Montéglin, La Motte-Du-Caire, Val Buëch-Méouge,
                                 Salignac, Banon, Aiglun, Mallemoisson, Cruis, Saint-Étienne-Les-Orgues,
